Fixed layout bug: top row was not visible.

--- a/apps/files/css/files.css
+++ b/apps/files/css/files.css
@@ -27,7 +27,11 @@
 }
 
 #filestable.multiselect { 
-	top: 63px; 
+	top: 76px; 
+}
+
+#filestable { 
+	top: 76px; 
 }
 
 table#filestable thead {
